b=1016177 reduce MEDIA_TIME_MAX to not overflow when multiplying by sample rates r=roc

MediaTimes are multiplied by sample rates when converting to ticks.

This new maximum leaves 24 bits to count seconds, which corresponds to 194
days.

TimeVarying::GetAt() can return INT64_MAX, which may be > GRAPH_TIME_MAX.

The "Start time too early" assertion would now fail because conversion of
STREAM_TIME_MAX to ticks no longer overflows.

--HG--
extra : rebase_source : b49c95315d0c633f191ff68aab0b5b7aa04c6e38